hphp/hack/test/typecheck/compile_test_cast.php.exp
File "compile_test_cast.php", line 28, characters 10-10:
Object casts are unsupported. Try 'if ($var instanceof A)' or 'invariant($var instanceof A, ...)'. (Naming[2055])
